--- a/style.css
+++ b/style.css
@@ -6,11 +6,15 @@
 }
 
 body{
-    background-color: #000;
+    background-image: url("imagens/background.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     height: 100vh;
+    font-size: 30px;
 }
 .interface{
-    max-width: 1280px;
+    max-width: 1440px;
     margin: 0 auto;
 }
 
